tests/language_modules/06_arrays/valid/empty_array_literal.vf
module EmptyArrayLiteral

procedure main()
is
    let values: Array<Integer, 0> = []
    check true
end main

end EmptyArrayLiteral