tests/language_modules/06_arrays/invalid_semantics/static_index_out_of_bounds.vf
module StaticIndexOutOfBounds

procedure main()
is
    let values: Array<Integer, 3> = [1, 2, 3]
    check values[3] = 0
end main

end StaticIndexOutOfBounds